tools/cmd_stubs.h

#define zcmp(a, b) strcmp((a), (b))
typedef struct window W;
typedef struct bw BW;
typedef struct b B;
typedef struct p P;
struct macro;
typedef struct macro MACRO;
struct cmd {
	const char *name;
	int flag;
	int (*func)(W *w, int k);
	MACRO *m;
	int arg;
	const char *negarg;
};
typedef struct options OPTIONS;
int u_goto_eol(W *w, int k);
int ushell(W *w, int k);
int uuparw(W *w, int k);
void rmmacro(MACRO *macro);
int exmacro(MACRO *m, int u, int k);
void dofollows(void);
void msgnw(W *w, const char *s);
BW *wmkpw(W *w, const char *prompt, B **history,
	int (*func)(W *w, char *s, void *object, int *notify),
	const char *huh, int (*abrt)(W *w, void *object),
	int (*tab)(BW *bw, int k),
	void *object, int *notify, struct charmap *map, int file_prompt);