tools/main_stubs.h

char *strstr(const char *h, const char *n);
int atexit(void (*func)(void));
#define JOERC ""
#define SHELL_TYPE_RAW 2
#define zlen(s) ((ptrdiff_t)strlen(s))
#define zstr(a, b) strstr((a), (b))
 typedef struct b B;
 typedef struct p P;
 typedef struct kmap KMAP;
 typedef struct bw BW;
 typedef struct cap CAP;
typedef struct options OPTIONS;
struct utf8_sm {
	char buf[8];
	ptrdiff_t ptr;
	int state;
	int accu;
};
CAP *my_getcap(char *name, long baud, void (*out)(void *outptr, char c), void *outptr);
int modify_logic(BW *bw, B *b);
int cstart(BW *bw, const char *name, char **s, void *obj, int *notify, int build, int out_only, const char *first_command, int type);
KMAP *kmap_getcontext(const char *name);