src/ushell.zig

//! Path A live port of JOE shell-window commands (`joe/ushell.c`).
//!
//! JOE `ushell.h` ABI lives here (bknd/vtbknd/run/build/grep/killpid,
//! `cstart`, `vt_scrdn`, history buffers). `joe/ushell.c` is a tombstone.

const std = @import("std");
const gap_types = @import("gapbuffer/types.zig");

const GapP = gap_types.P;
const GapB = gap_types.B;
const GapOptions = gap_types.OPTIONS;
const NO_MORE_DATA = gap_types.NO_MORE_DATA;

const TYPETW: c_int = 0x0100;
const TYPEPW: c_int = 0x0200;
const SHELL_TYPE_DUMB: c_int = 0;
const SHELL_TYPE_VT: c_int = 1;
const SHELL_TYPE_RAW: c_int = 2;
const PWFLAG_COMMAND: c_int = 8;
const YES_CODE: c_int = -10;

/// System rc dir from `-Djoerc=` (empty → relative shell scripts / builtins).
const JOERC = @import("build_options").joerc;

export var runhist: ?*GapB = null;
export var buildhist: ?*GapB = null;
export var grephist: ?*GapB = null;

const Watom = extern struct {
    context: ?[*:0]const u8,
    disp: ?*const fn (?*anyopaque, c_int) callconv(.c) void,
    follow: ?*const fn (?*anyopaque) callconv(.c) void,
    abort: ?*const fn (?*anyopaque) callconv(.c) c_int,
    rtn: ?*const fn (?*anyopaque) callconv(.c) c_int,
    @"type": ?*const fn (?*anyopaque, c_int) callconv(.c) c_int,
    resize: ?*const fn (?*anyopaque, isize, isize) callconv(.c) void,
    move: ?*const fn (?*anyopaque, isize, isize) callconv(.c) void,
    ins: ?*const fn (?*anyopaque, ?*anyopaque, i64, i64, c_int) callconv(.c) void,
    del: ?*const fn (?*anyopaque, ?*anyopaque, i64, i64, c_int) callconv(.c) void,
    what: c_int,
};

const WinLink = extern struct {
    next: ?*WinRec,
    prev: ?*WinRec,
};

const WinRec = extern struct {
    link: WinLink,
    t: ?*anyopaque,
    x: isize,
    y: isize,
    w: isize,
    h: isize,
    ny: isize,
    nh: isize,
    reqh: isize,
    fixed: isize,
    hh: isize,
    win: ?*WinRec,
    main: ?*WinRec,
    orgwin: ?*WinRec,
    curx: isize,
    cury: isize,
    kbd: ?*anyopaque,
    watom: ?*const Watom,
    object: ?*anyopaque,
    msgt: ?[*:0]const u8,
    msgb: ?[*:0]const u8,
    huh: ?[*:0]const u8,
    notify: ?*c_int,
    bstack: ?*anyopaque,
};

const BwSaved = extern struct {
    ww: c_int,
    ai: c_int,
    sp: c_int,
};

const BwRec = extern struct {
    parent: ?*WinRec,
    b: ?*GapB,
    top: ?*GapP,
    cursor: ?*GapP,
    offset: i64,
    t: ?*anyopaque,
    h: isize,
    w: isize,
    x: isize,
    y: isize,
    o: GapOptions,
    object: ?*anyopaque,
    lincols: c_int,
    curlin: i64,
    top_changed: c_int,
    db: ?*anyopaque,
    shell_flag: c_int,
    pasting: c_int,
    last_viewmode: c_int,
    saved: BwSaved,
};

const ScreenRec = extern struct {
    t: ?*anyopaque,
    wind: isize,
    topwin: ?*WinRec,
    curwin: ?*WinRec,
    w: isize,
    h: isize,
};

const Utf8SmRec = extern struct {
    buf: [8]u8,
    ptr: isize,
    state: c_int,
    accu: c_int,
};

const VtRec = extern struct {
    state: c_int,
    buf: [1024]u8,
    bufx: isize,
    argv: [3]isize,
    argc: isize,
    top: ?*GapP,
    height: isize,
    width: isize,
    regn_top: isize,
    regn_bot: isize,
    vtcur: ?*GapP,
    b: ?*GapB,
    kbd: ?*anyopaque,
    attr: c_int,
    utf8_sm: Utf8SmRec,
};

const KbdRec = extern struct {
    curmap: ?*anyopaque,
    topmap: ?*anyopaque,
    seq: [16]c_int,
    x: isize,
};

const MpxRec = extern struct {
    ackfd: c_int,
    kpid: c_int,
    pid: c_int,
    func: ?*const fn (?*anyopaque, [*c]u8, isize) callconv(.c) void,
    object: ?*anyopaque,
    die: ?*const fn (?*anyopaque) callconv(.c) void,
    dieobj: ?*anyopaque,
};

comptime {
    if (@sizeOf(WinRec) != 200) @compileError("WinRec size mismatch");
    if (@sizeOf(BwRec) != 488) @compileError("BwRec size mismatch");
    if (@sizeOf(GapP) != 112) @compileError("GapP size mismatch");
    if (@sizeOf(ScreenRec) != 48) @compileError("ScreenRec size mismatch");
    if (@sizeOf(VtRec) != 1168) @compileError("VtRec size mismatch");
}

extern var maint: ?*ScreenRec;
extern var shell_kbd: ?*KbdRec;
extern var locale_map: ?*anyopaque;
extern var yes_key: [*c]const u8;
extern var obuf: [*c]u8;
extern var obufp: isize;
extern var obufsiz: isize;

extern fn pdup(p: ?*GapP, tr: [*:0]const u8) ?*GapP;
extern fn prm(p: ?*GapP) void;
extern fn pset(n: ?*GapP, p: ?*GapP) ?*GapP;
extern fn pnextl(p: ?*GapP) ?*GapP;
extern fn pline(p: ?*GapP, line: i64) ?*GapP;
extern fn pgoto(p: ?*GapP, loc: i64) ?*GapP;
extern fn piscol(p: ?*GapP) i64;
extern fn pgetc(p: ?*GapP) c_int;
extern fn prgetc(p: ?*GapP) c_int;
extern fn bdel(from: ?*GapP, to: ?*GapP) void;
extern fn binsm(p: ?*GapP, blk: ?*const anyopaque, amnt: isize) ?*GapP;
extern fn modify_logic(bw: ?*anyopaque, b: ?*GapB) c_int;
extern fn msgnw(w: ?*anyopaque, s: [*c]const u8) void;
extern fn my_gettext(s: [*c]const u8) [*c]const u8;
extern fn dofollows() void;
extern fn undomark() void;
extern fn edupd(flg: c_int) void;
extern fn nscrlup(t: ?*anyopaque, top: isize, bot: isize, amnt: isize) void;
extern fn ttflsh() c_int;
extern fn load_syntax(name: [*c]const u8) ?*anyopaque;
extern fn vtmaster(t: ?*anyopaque, b: ?*GapB) ?*BwRec;
extern fn mkvt(b: ?*GapB, top: ?*GapP, height: isize, width: isize) ?*VtRec;
extern fn vtrm(vt: ?*VtRec) void;
extern fn vt_data(vt: ?*VtRec, indat: *[*c]u8, insiz: *isize) ?*anyopaque;
extern fn exmacro(m: ?*anyopaque, u: c_int, k: c_int) c_int;
extern fn rmmacro(m: ?*anyopaque) void;
extern fn parserrb(b: ?*GapB) c_int;
extern fn parseone_grep(map: ?*anyopaque, s: [*c]const u8, rtn_name: *[*c]u8, rtn_line: *i64) void;
extern fn file_exists(path: [*c]const u8) c_int;
extern fn kmap_empty(k: ?*anyopaque) c_int;
extern fn kmap_getcontext(name: [*:0]const u8) ?*anyopaque;
extern fn yncheck(set: [*c]const u8, ch: c_int) c_int;
extern fn cmplt_command(bw: ?*anyopaque, k: c_int) c_int;
extern fn uuparw(w: ?*anyopaque, k: c_int) c_int;
extern fn u_goto_eol(w: ?*anyopaque, k: c_int) c_int;
extern fn slen(s: [*c]const u8) isize;
extern fn vsrm(s: [*c]u8) void;
extern fn vsncpy(vary: [*c]u8, pos: isize, array: [*c]const u8, len: isize) [*c]u8;
extern fn vamk(len: isize) [*c][*c]u8;
extern fn vaadd(vary: [*c][*c]u8, el: [*c]u8) [*c][*c]u8;
extern fn varm(v: [*c][*c]u8) void;
extern fn mpxmk(
    ptyfd: *c_int,
    cmd: [*c]const u8,
    args: [*c][*c]u8,
    func: ?*const fn (?*anyopaque, [*c]u8, isize) callconv(.c) void,
    object: ?*anyopaque,
    die: ?*const fn (?*anyopaque) callconv(.c) void,
    dieobj: ?*anyopaque,
    copy_in: c_int,
    w: isize,
    h: isize,
    use_pipe: c_int,
) ?*MpxRec;
extern fn wmkpw(
    w: ?*anyopaque,
    prompt: [*c]const u8,
    history: ?*?*GapB,
    func: ?*const fn (?*anyopaque, [*c]u8, ?*anyopaque, ?*c_int) callconv(.c) c_int,
    huh: ?[*:0]const u8,
    abrt: ?*const fn (?*anyopaque, ?*anyopaque) callconv(.c) c_int,
    tab: ?*const fn (?*anyopaque, c_int) callconv(.c) c_int,
    object: ?*anyopaque,
    notify: ?*c_int,
    map: ?*anyopaque,
    file_prompt: c_int,
) ?*BwRec;
extern fn mkqw(
    w: ?*anyopaque,
    prompt: [*c]const u8,
    len: isize,
    func: ?*const fn (?*anyopaque, c_int, ?*anyopaque, ?*c_int) callconv(.c) c_int,
    abrt: ?*const fn (?*anyopaque, ?*anyopaque) callconv(.c) c_int,
    object: ?*anyopaque,
    notify: ?*c_int,
) ?*anyopaque;

extern fn getenv(name: [*c]const u8) [*c]u8;
extern fn strcmp(a: [*c]const u8, b: [*c]const u8) c_int;
extern fn strstr(hay: [*c]const u8, needle: [*c]const u8) [*c]u8;
extern fn close(fd: c_int) c_int;
extern fn write(fd: c_int, buf: ?*const anyopaque, n: usize) isize;
extern fn kill(pid: c_int, sig: c_int) c_int;

fn asWin(w: ?*anyopaque) *WinRec {
    return @ptrCast(@alignCast(w.?));
}

fn windBw(w_in: ?*anyopaque) ?*BwRec {
    if (w_in == null) return null;
    const win = asWin(w_in);
    const wa = win.watom orelse return null;
    if ((wa.what & (TYPETW | TYPEPW)) == 0) return null;
    return @ptrCast(@alignCast(win.object orelse return null));
}

fn vsLen(s: [*c]u8) isize {
    if (s == null) return 0;
    return (@as([*]align(1) const isize, @ptrCast(s)) - 1)[0];
}

fn zlen(s: [*c]const u8) isize {
    if (s == null) return 0;
    return @intCast(std.mem.len(@as([*:0]const u8, @ptrCast(s))));
}

fn zcmp(a: [*c]const u8, b: [*:0]const u8) c_int {
    return strcmp(a, b);
}

fn zstr(hay: [*c]const u8, needle: [*:0]const u8) bool {
    return strstr(hay, needle) != null;
}

fn ttputcBell() void {
    if (obuf == null) return;
    const idx: usize = @intCast(obufp);
    obuf[idx] = 7;
    obufp += 1;
    if (obufp == obufsiz) _ = ttflsh();
}

fn cdone(obj: ?*anyopaque) callconv(.c) void {
    const b: *GapB = @ptrCast(@alignCast(obj orelse return));
    b.pid = 0;
    _ = close(b.out);
    b.out = -1;
    if (b.vt) |vt_raw| {
        vtrm(@ptrCast(@alignCast(vt_raw)));
        b.vt = null;
    }
}

fn cdoneParse(obj: ?*anyopaque) callconv(.c) void {
    const b: *GapB = @ptrCast(@alignCast(obj orelse return));
    b.pid = 0;
    _ = close(b.out);
    b.out = -1;
    if (b.vt) |vt_raw| {
        vtrm(@ptrCast(@alignCast(vt_raw)));
        b.vt = null;
    }
    _ = parserrb(b);
}

fn ansiall(b: *GapB) void {
    const screen = maint orelse return;
    var w = screen.topwin orelse return;
    while (true) {
        if (w.watom) |wa| {
            if ((wa.what & TYPETW) != 0) {
                if (w.object) |obj| {
                    const bw: *BwRec = @ptrCast(@alignCast(obj));
                    if (bw.b == b) {
                        bw.o.ansi = b.o.ansi;
                        bw.o.syntax = b.o.syntax;
                    }
                }
            }
        }
        w = w.link.next orelse break;
        if (w == screen.topwin) break;
    }
}

fn cready(b: *GapB, byte: i64) void {
    if (b.oldcur) |oc| {
        b.shell_flag = if (oc.byte == byte) 1 else 0;
    } else {
        b.shell_flag = 0;
    }
    const screen = maint orelse return;
    var w = screen.topwin orelse return;
    while (true) {
        if (w.watom) |wa| {
            if ((wa.what & TYPETW) != 0) {
                if (w.object) |obj| {
                    const bw: *BwRec = @ptrCast(@alignCast(obj));
                    if (bw.b == b) {
                        if (bw.cursor) |cur| {
                            bw.shell_flag = if (cur.byte == byte) 1 else 0;
                        } else {
                            bw.shell_flag = 0;
                        }
                    } else {
                        bw.shell_flag = 0;
                    }
                }
            }
        }
        w = w.link.next orelse break;
        if (w == screen.topwin) break;
    }
}
